@@ -1,0 +1,193 @@
+#!/usr/local/bin/ruby
+
+require 'gluon/po'
+require 'rack'
+require 'test/unit'
+
+module Gluon::Test
+  class PresentationObjectTest < Test::Unit::TestCase
+    # for ident(1)
+    CVS_ID = '$Id$'
+
+    def setup
+      @env = Rack::MockRequest.env_for('http://foo:8080/bar.cgi',
+                                       'SCRIPT_NAME' => '/bar.cgi')
+      @req = Rack::Request.new(@env)
+      @res = Rack::Response.new
+    end
+
+    def build_page(page_type)
+      @page = page_type.new
+      @po = Gluon::PresentationObject.new(@page, @req, @res)
+      @context = Gluon::ERBContext.new(@po, @req, @res)
+    end
+    private :build_page
+
+    def render_page(eruby_script)
+      Gluon::ERBContext.render(@context, eruby_script)
+    end
+    private :render_page
+
+    class PageForImplicitViewName
+    end
+
+    def test_view_name_implicit
+      build_page(PageForImplicitViewName)
+      assert_equal('Gluon/Test/PresentationObjectTest/PageForImplicitViewName.rhtml', @po.view_name)
+    end
+
+    class PageForExplicitViewName
+      def view_name
+        'foo.rhtml'
+      end
+    end
+
+    def test_view_name_explicit
+      build_page(PageForExplicitViewName)
+      assert_equal('foo.rhtml', @po.view_name)
+    end
+
+    class PageForValue
+      def foo
+        'Hello world.'
+      end
+
+      def bar
+        '&<>" foo'
+      end
+    end
+
+    def test_value
+      build_page(PageForValue)
+
+      assert_equal('Hello world.',
+                   render_page('<%= value :foo %>'))
+      assert_equal('&amp;&lt;&gt;&quot; foo',
+                   render_page('<%= value :bar %>'))
+
+      assert_equal('Hello world.',
+                   render_page('<%= value :foo, :escape => true %>'))
+      assert_equal('&amp;&lt;&gt;&quot; foo',
+                   render_page('<%= value :bar, :escape => true %>'))
+
+      assert_equal('Hello world.',
+                   render_page('<%= value :foo, :escape => false %>'))
+      assert_equal('&<>" foo',
+                   render_page('<%= value :bar, :escape => false %>'))
+    end
+
+    class PageForCond
+      def foo
+        true
+      end
+
+      def bar
+        false
+      end
+    end
+
+    def test_cond
+      build_page(PageForCond)
+
+      assert_equal('HALO',
+                   render_page('<% cond :foo do %>HALO<% end %>'))
+      assert_equal('',
+                   render_page('<% cond :bar do %>HALO<% end %>'))
+
+      assert_equal('',
+                   render_page('<% cond :foo, :not => true do %>HALO<% end %>'))
+      assert_equal('HALO',
+                   render_page('<% cond :bar, :not => true do %>HALO<% end %>'))
+
+      assert_equal('',
+                   render_page('<% not_cond :foo do %>HALO<% end %>'))
+      assert_equal('HALO',
+                   render_page('<% not_cond :bar do %>HALO<% end %>'))
+    end
+
+    class PageForForeach
+      def foo
+        %w[ apple banana orange ]
+      end
+
+      def bar
+        []
+      end
+    end
+
+    def test_foreach
+      build_page(PageForForeach)
+
+      assert_equal('[apple][banana][orange]',
+                   render_page('<% foreach :foo do %>[<%= value %>]<% end %>'))
+      assert_equal('',
+                   render_page('<% foreach :bar do %>[<%= value %>]<% end %>'))
+
+      assert_equal('[1.apple][2.banana][3.orange]',
+                   render_page('<% foreach :foo do |i| %>[<%= i.succ %>.<%= value %>]<% end %>'))
+      assert_equal('',
+                   render_page('<% foreach :bar do |i| %>[<%= i.succ %>.<%= value %>]<% end %>'))
+    end
+
+    class PageForLinkURI
+      def ruby_home_uri
+        'http://www.ruby-lang.org'
+      end
+
+      def ruby_home_text
+        'Ruby'
+      end
+    end
+
+    def test_link_uri
+      build_page(PageForLinkURI)
+
+      assert_equal('<a href="http://www.ruby-lang.org">http://www.ruby-lang.org</a>',
+                   render_page('<%= link_uri "http://www.ruby-lang.org" %>'))
+      assert_equal('<a href="http://www.ruby-lang.org">Ruby</a>',
+                   render_page('<%= link_uri "http://www.ruby-lang.org", :text => "Ruby" %>'))
+      assert_equal('<a id="ruby" href="http://www.ruby-lang.org">Ruby</a>',
+                   render_page('<%= link_uri "http://www.ruby-lang.org", :text => "Ruby", :id => "ruby" %>'))
+
+      assert_equal('<a href="http://www.ruby-lang.org">http://www.ruby-lang.org</a>',
+                   render_page('<%= link_uri :ruby_home_uri %>'))
+      assert_equal('<a href="http://www.ruby-lang.org">Ruby</a>',
+                   render_page('<%= link_uri :ruby_home_uri, :text => :ruby_home_text %>'))
+      assert_equal('<a id="ruby" href="http://www.ruby-lang.org">Ruby</a>',
+                   render_page('<%= link_uri :ruby_home_uri, :text => :ruby_home_text, :id => "ruby" %>'))
+    end
+
+    class PageForLinkPath
+      def foo_path
+        '/Foo'
+      end
+
+      def foo_text
+        'foo'
+      end
+    end
+
+    def test_link_path
+      build_page(PageForLinkPath)
+
+      assert_equal('<a href="/bar.cgi/Foo">/bar.cgi/Foo</a>',
+                   render_page('<%= link_path "/Foo" %>'))
+      assert_equal('<a href="/bar.cgi/Foo">foo</a>',
+                   render_page('<%= link_path "/Foo", :text => "foo" %>'))
+      assert_equal('<a id="foo" href="/bar.cgi/Foo">foo</a>',
+                   render_page('<%= link_path "/Foo", :text => "foo", :id => "foo" %>'))
+
+      assert_equal('<a href="/bar.cgi/Foo">/bar.cgi/Foo</a>',
+                   render_page('<%= link_path :foo_path %>'))
+      assert_equal('<a href="/bar.cgi/Foo">foo</a>',
+                   render_page('<%= link_path :foo_path, :text => :foo_text %>'))
+      assert_equal('<a id="foo" href="/bar.cgi/Foo">foo</a>',
+                   render_page('<%= link_path :foo_path, :text => :foo_text, :id => "foo" %>'))
+    end
+  end
+end
+
+# Local Variables:
+# mode: Ruby
+# indent-tabs-mode: nil
+# End:
